--- a/#01- NLP Sentiment Analysis Dating Apps (EDA).ipynb
+++ b/#01- NLP Sentiment Analysis Dating Apps (EDA).ipynb
@@ -1945,6 +1945,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c0946c8",
+   "metadata": {},
+   "source": [
+    "# 1. Verdeling van Scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a768cac1",
+   "metadata": {},
+   "source": [
+    "Deze grafiek toont de frequentie van beoordelingen in de tinder_reviews-dataset en laat de verdeling in verschillende scorecategorieën zien."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 98,
    "id": "25e3e1a8",
@@ -1982,12 +1998,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91df995b",
+   "metadata": {},
+   "source": [
+    "# 2. Gemiddeld Aantal Duimen Omhoog per Score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce17bbf",
+   "metadata": {},
+   "source": [
+    "Deze staafdiagram toont welke gemiddelde scores meer 'duimen omhoog' ontvangen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "id": "13a120fb",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2018,6 +2048,22 @@
    "metadata": {},
    "source": [
     "De tweede grafiek toont aan dat reviews met lagere scores (1 en 2) gemiddeld meer duimpjes omhoog krijgen. Dit geeft aan dat negatieve reviews meer resoneren bij gebruikers, mogelijk omdat ze als nuttiger of herkenbaarder worden gezien."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b23e042a",
+   "metadata": {},
+   "source": [
+    "# 3. Aantal Reviews in de Tijd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eb4bb1a",
+   "metadata": {},
+   "source": [
+    "Een tijdreeksdiagram dat de verdeling van het aantal reviews over de tijd laat zien."
    ]
   },
   {
@@ -2980,6 +3026,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88198722",
+   "metadata": {},
+   "source": [
+    "# 1. Verdeling van scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "id": "7c9992c7",
@@ -3014,6 +3068,14 @@
    "metadata": {},
    "source": [
     "De eerste visualisatie toont dat de scores sterk gepolariseerd zijn. De meeste gebruikers geven een score van 1 of 5, wat suggereert dat gebruikers ofwel erg ontevreden of juist erg tevreden zijn over hun ervaring. Dit wijst op een duidelijke verdeeldheid in de ervaringen van gebruikers, waarbij er weinig neutrale beoordelingen zijn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85128c0d",
+   "metadata": {},
+   "source": [
+    "# 2. Gemiddeld Aantal Duimen Omhoog per Score"
    ]
   },
   {
@@ -3053,6 +3115,14 @@
    "metadata": {},
    "source": [
     "De tweede grafiek laat zien dat beoordelingen met lagere scores, zoals 1 en 2, gemiddeld meer thumbs-ups ontvangen. Dit betekent dat negatieve beoordelingen meer interactie of betrokkenheid genereren van andere gebruikers, waarschijnlijk omdat deze als nuttiger of herkenbaarder worden beschouwd."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5302b0c1",
+   "metadata": {},
+   "source": [
+    "# 3. Aantal Reviews in de Tijd"
    ]
   },
   {
@@ -4005,6 +4075,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6cce8d5",
+   "metadata": {},
+   "source": [
+    "# 1. Verdeling van Scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 107,
    "id": "20c3e93f",
@@ -4039,6 +4117,14 @@
    "metadata": {},
    "source": [
     "De eerste visualisatie toont dat de scores sterk gepolariseerd zijn. De meeste gebruikers geven een score van 1 of 5, wat suggereert dat gebruikers ofwel erg ontevreden of juist erg tevreden zijn over hun ervaring. Dit wijst op een duidelijke verdeeldheid in de ervaringen van gebruikers, waarbij er weinig neutrale beoordelingen zijn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da7641ec",
+   "metadata": {},
+   "source": [
+    "# 2. Gemiddeld Aantal Duimen Omhoog per Score"
    ]
   },
   {
@@ -4078,6 +4164,14 @@
    "metadata": {},
    "source": [
     "De tweede grafiek laat zien dat beoordelingen met lagere scores, zoals 1 en 2, gemiddeld meer thumbs-ups ontvangen. Dit betekent dat negatieve beoordelingen meer interactie of betrokkenheid genereren van andere gebruikers, waarschijnlijk omdat deze als nuttiger of herkenbaarder worden beschouwd."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c5980d",
+   "metadata": {},
+   "source": [
+    "# 3. Aantal Reviews in de Tijd"
    ]
   },
   {
